# cryodrgn

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  TESTING_IMPROVEMENTS.md  TEST_OPTIMIZATION_SUMMARY.md  api.html  backproject.py  backproject_hartley.py  backproject_k_enc.py  backproject_k_enc2.py  backproject_nn.py  backproject_nn_hartley.py  backproject_tilt.py  backproject_voxel.py  beta_schedule.py  bnb_het.py  bnb_het_tilt.py  bnb_rot.py  bnb_rot_tilt.py  conftest_optimizations.py  eval_decoder.py  eval_decoder_slice.py  eval_encoder.py  eval_encoder_bnb.py  eval_encoder_tilt.py  eval_encoder_tiltvae.py  eval_equivariance.py  eval_vae_pose.py  fouriershrink.py  genindex.html  index.html  objects.inv  project3d.py  py-modindex.html  pyproject.toml  pyrightconfig.json  (+16 more)
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: beta_release.yml  command_builder_page.yml  comprehensive_tests.yml  docs.yml  github_pages.yml  main.yml  release.yml  style.yml  tests.yml
_sources/: api.rst.txt
_sources/pages/: faq.md.txt  installation.md.txt  intro.md.txt  landscape_analysis.md.txt
_static/: documentation_options.js
analysis_scripts/: analyze.sh  classify_maps.py  cryoDRGN_viz_template.ipynb  fsc.py  get_z_from_2d.py  get_z_pcs.py  graph_traversal.py  kmeans.py  plot_loss.py  plot_z1.py  plot_z2.py  plot_z_pca.py  plotfsc.py  run_umap.py  tsne.py
cryodrgn/: __init__.py  __main__.py  analysis.py  analysis_drgnai.py  beta_schedule.py  bnb.py  command_line.py  config.py  ctf.py  dataset.py  fft.py  healpy_grid.json  lattice.py  lie_tools.py  losses.py  make_healpy.py  masking.py  metrics.py  models.py  models_ai.py  mrc.py  mrcfile.py  pose.py  pose_search.py  pose_search_ai.py  shift_grid.py  shift_grid3.py  so3_grid.py  source.py  starfile.py  summary.py  types.py  utils.py  utils_exec.py
cryodrgn/commands/: README.md  __init__.py  abinit.py  abinit_ai.py  abinit_het.py  abinit_het_old.py  abinit_homo.py  abinit_homo_old.py  analyze.py  analyze_convergence.py  analyze_landscape.py  analyze_landscape_full.py  backproject_nn.py  backproject_voxel.py  bnb_het.py  bnb_rot.py  clean.py  dashboard.py  direct_traversal.py  downsample.py  downsample_dir.py  eval_images.py  eval_vol.py  filter.py  graph_traversal.py  parse_csparc.py  parse_ctf_csparc.py  parse_ctf_star.py  parse_pose_csparc.py  parse_pose_star.py  parse_star.py  pc_traversal.py  plot_volumes.py  preprocess.py  preprocess_mrcs.py  resize_images.py  setup.py  train.py  train_ai.py  train_dec.py  (+6 more)
cryodrgn/commands_drgnai/: abinit.py  analyze.py
cryodrgn/commands_utils/: README.md  __init__.py  add_psize.py  analyze_convergence.py  clean.py  concat_pkls.py  configs.py  filter_cs.py  filter_mrcs.py  filter_pkl.py  filter_star.py  flip_hand.py  fsc.py  gen_mask.py  invert_contrast.py  make_movies.py  parse_relion.py  phase_flip.py  plot_classes.py  plot_fsc.py  select_clusters.py  select_random.py  translate_mrcs.py  view_cs_header.py  view_header.py  view_mrcs.py  write_cs.py  write_star.py
cryodrgn/dashboard/: __init__.py  app.py  bench_plot_interfaces.py  chimerax_animation.py  column_names.py  command_builder_cli_help.py  command_builder_data.py  command_builder_page.py  context.py  covariate_labels.py  data.py  explorer_volumes.py  github_pages.py  landscape_full_3d.py  landscape_volpca.py  mpl_style.py  palette_config.py  particle_explorer.py  plot_gif_utils.py  plots.py  plots_color_covariate.py  plots_figure_utils.py  plots_pair_grid.py  plots_scatter.py  preload.py  record_dashboard_interactions_gif.py  record_filter_selection_gif.py  record_landscape_volpca_gif.py  record_latent3d_actions_gif.py  record_pairplot_actions_gif.py  route_helpers.py  trajectory.py  (+4 more)
docs/: Makefile  conf.py  index.rst
lib-python/: analysis.py  bnb.py  config.py  ctf.py  dataset.py  fft.py  lattice.py  lie_tools.py  losses.py  models.py  mrc.py  pose.py  shift_grid.py  shift_grid3.py  so3_grid.py  starfile.py  utils.py
pages/: cryodrgn2.html  empiar_tutorial.html  faq.html  installation.html  intro.html  landscape_analysis.html  large_datasets.html
testing/: diff_cryodrgn_pkl.py  quicktest.sh  test.sh  test_abinit.sh  test_bnb.sh  test_entropy.py  test_mrc.py  test_parse.sh  test_pose_search.py  test_pose_search_rag12_128.py  test_pose_search_real_128.py  test_pose_search_syn_64.py  test_relion31.sh  test_sta.sh  test_sta_small.sh  test_translate.py  test_translate_ht2.py  test_utils.py  test_utils.sh  unittest.sh
tests/: conftest.py  conftest_parallel.py  quicktest.sh  run_test_suite.py  test_abinit.py  test_add_psize.py  test_amort_model.py  test_backprojection.py  test_clean.py  test_config.py  test_dashboard.py  test_dashboard_command_builder.py  test_dashboard_core.py  test_dashboard_extended.py  test_dashboard_landscape_volpca.py  test_dashboard_pairplot.py  test_dashboard_particle_explorer.py  test_dashboard_scatter3d.py  test_dashboard_trajectory.py  test_dataset.py  test_direct_traversal.py  test_documentation.py  test_downsample.py  test_entropy.py  test_error_handling.py  test_eval_images.py  test_fft.py  test_filter_mrcs.py  test_filter_pkl.py  test_flip_hand.py  test_fsc.py  test_gen_mask.py  test_graph_traversal.py  test_integration.py  test_invert_contrast.py  test_masks.py  test_mocking.py  test_mrc.py  test_parse.py  test_parse_ctf_star.py  (+29 more)
utils/: add_noise.py  add_psize.py  align3d.py  analyze_convergence.py  compare_rot.py  compare_rot_min.py  compare_trans.py  compute_err.py  concat_pkls.py  convert_ctf_pkl.py  filter_mrcs.py  filter_pkl.py  filter_star.py  flip_hand.py  fouriershrink.py  invert_contrast.py  make_random_selection.py  make_train_test.py  mask_fft.py  parse_bnb_pose.py  parse_cs_alignments.py  parse_cs_alignments_abinit.py  parse_ctf.py  parse_ctf_csparc.py  parse_ctf_star.py  parse_pose_csparc.py  parse_pose_star.py  parse_star_alignments.py  phase_flip.py  plot_z1.py  plot_z2.py  plot_z_pca.py  plotfsc.py  print_cs.py  project3d.py  select_clusters.py  translate_stack.py  view_header.py  view_stack.py  view_vol.py  (+1 more)
(+183 files in other folders)
