[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cryodrgn"
dynamic = ["version"]
authors = [
  { name="Ellen Zhong", email="zhonge@princeton.edu" }
]
description = "cryoDRGN heterogeneous reconstruction"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "torch<2.6.0",
    "pandas<3.0.0",
    "numpy<1.27",
    "matplotlib",
    "pyyaml",
    "scipy>=1.3.1",
    "scikit-learn",
    "seaborn",
    "cufflinks",
    "jupyterlab",
    "notebook<7",
    "umap-learn",
    "ipywidgets<8",
    "healpy",
    "plotly<6",
    "igraph",
    "starfile",
]

[project.optional-dependencies]
dev = [
    "build",
    "myst-parser",
    "pre-commit",
    "pyright==1.1.300",
    "pytest>=6",
    "pytest-cov",
    "pytest-benchmark",
    "pytest-mock",
    "hypothesis",
    "sphinx",
    "sphinx-rtd-theme",
    "twine"
]

[project.scripts]
cryodrgn = "cryodrgn.command_line:main_commands"
cryodrgn_utils = "cryodrgn.command_line:util_commands"

[project.urls]
"Homepage" = "https://github.com/zhonge/cryodrgn"

[tool.setuptools_scm]
write_to = "cryodrgn/_version.py"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["cryodrgn*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA --cov=cryodrgn --cov-report=term-missing --cov-report=html --cov-report=xml"
testpaths = [
    "tests"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests", 
    "gpu: marks tests that require GPU",
    "performance: marks performance/benchmark tests",
    "cmdline: marks command line interface tests",
]

[tool.coverage.run]
source = ["cryodrgn"]
omit = [
    "cryodrgn/_version.py",
    "cryodrgn/templates/*",
    "*/tests/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
skip_covered = false
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.pyright]
exclude = ["build/**"]
