[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cryodrgn"
dynamic = ["version"]
authors = [
  { name="Ellen Zhong", email="zhonge@princeton.edu" }
]
description = "cryoDRGN heterogeneous reconstruction"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "torch>=2.0.0,<2.10.0",
    "pandas<3.0.0",
    "numpy<1.27",
    "matplotlib",
    "pyyaml",
    "scipy>=1.3.1",
    "scikit-learn",
    "seaborn",
    "cufflinks",
    "jupyterlab",
    "notebook<7",
    "umap-learn",
    "ipywidgets<8",
    "healpy",
    "plotly<6",
    "igraph",
    "starfile",
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "myst-parser",
    "pre-commit",
    "pyright==1.1.300",
    "pytest>=6",
    "pytest-xdist",
    "sphinx",
    "sphinx-rtd-theme",
    "twine"
]
# Headless dashboard GIF capture: install optional ``dashboard-gif`` deps, run
# ``playwright install chromium``, then use ``python -m cryodrgn.dashboard.static.demo_animations.recorders.scripts.<module>``
# or the ``cryodrgn-dashboard-record-*`` console scripts.
dashboard-gif = [
    "playwright>=1.41.0",
    "pillow>=9.0.0",
]

[project.scripts]
cryodrgn = "cryodrgn.command_line:main_commands"
cryodrgn_utils = "cryodrgn.command_line:util_commands"
cryodrgn-dashboard-record-interactions = "cryodrgn.dashboard.static.demo_animations.recorders.scripts.record_dashboard_interactions_gif:main"
cryodrgn-dashboard-record-explorer-actions = "cryodrgn.dashboard.static.demo_animations.recorders.scripts.record_particle_explorer_actions_gif:main"
cryodrgn-dashboard-record-explorer-multi-region = "cryodrgn.dashboard.static.demo_animations.recorders.scripts.record_particle_explorer_multi_region_gif:main"
cryodrgn-dashboard-record-filter-selection = "cryodrgn.dashboard.static.demo_animations.recorders.scripts.record_filter_selection_gif:main"
cryodrgn-dashboard-record-pairplot-actions = "cryodrgn.dashboard.static.demo_animations.recorders.scripts.record_pairplot_actions_gif:main"
cryodrgn-dashboard-record-latent3d-actions = "cryodrgn.dashboard.static.demo_animations.recorders.scripts.record_latent3d_actions_gif:main"
cryodrgn-dashboard-record-landscape-volpca = "cryodrgn.dashboard.static.demo_animations.recorders.scripts.record_landscape_volpca_gif:main"

[project.urls]
"Homepage" = "https://github.com/zhonge/cryodrgn"

[tool.setuptools_scm]
write_to = "cryodrgn/_version.py"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"cryodrgn.dashboard" = [
    "templates/*.html",
    # One recursive glob for CSS/JS, shipped GIFs, and anything else under ``static/`` (replaces
    # overlapping ``static/*`` + ``static/demo_animations/...`` entries).
    "static/**/*",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cryodrgn*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA"
# Prefer the checkout on ``sys.path`` over any older ``cryodrgn`` installed in the env
# (otherwise dashboard tests exercise site-packages, not the working tree).
pythonpath = ["."]
testpaths = [
    "tests"
]

[tool.pyright]
exclude = ["build/**"]
